--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - sudo apt-get install graphviz
 before_script:
 - psql --file=dev.sql
-- psql --file=db-schema.sql
+- psql --file=db-schema.sql -d app
 script:
 - cd db-docs
 - generate-schemadocs.sh
